--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "php-file-explorer",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
+  "description": "PHP File Explorer, Editor and Terminal",
   "scripts": {
     "build": "node bin/build.js"
   },
-  "author": "",
+  "author": "n-boerger",
   "license": "ISC",
   "dependencies": {
     "@rollup/plugin-terser": "^0.1.0",
-    "axios": "^1.1.3",
     "ejs": "^3.1.8",
     "minify": "^9.1.0",
     "rollup": "^3.2.5"
